50-infra/k8s/bpmn-dispatcher/ingress-dispatcher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
  name: dispatcher-etzhayyim-com
  namespace: mitama-udf
spec:
  ingressClassName: nginx
  rules:
  - host: dispatcher.etzhayyim.com
    http:
      paths:
      - backend:
          service:
            name: bpmn-dispatcher
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dispatcher.etzhayyim.com
    secretName: dispatcher-etzhayyim-com-tls
